@@ -9,8 +9,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-    <maven.compiler.release>21</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -28,7 +26,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>${maven.compiler.release}</release>
+            <release>23</release>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
         <version>3.13.0</version>
       </plugin>
